--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "express": "^4.21.2",
+    "mongodb": "^6.19.0",
+    "mongoose": "^7.5.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["node", "express", "mongodb", "video"],
+  "keywords": [
+    "node",
+    "express",
+    "mongodb",
+    "video"
+  ],
   "author": "",
   "license": "ISC"
 }
